# databeam

./: .dockerignore  .env  .gitattributes  .gitignore  DEVELOPMENT.md  Makefile  README.md  docker-compose.yml
core/controller/: Dockerfile  controller.py  job_server.py  mcap_recover.py  meta_handler.py  requirements.txt
core/hostcmd_helper/: client.py  go.mod  main.go
core/rest_api/: .gitignore  Dockerfile  controller_api.py  file_api.py  gunicorn.conf.py  install_dependencies.sh  main.py  preview_api.py  requirements.txt  server.py
core/rest_api/plot_juggler/: plot_juggler_xml_header.txt
core/rest_api/templates/: index.html  login.html
core/zmq_router/: Dockerfile  pubsub_proxy.py  queryable_router.py  start.sh
deploy/: databeam.service  databeam_hostcmd.service  databeam_run.sh  grafana-datasource.yml  requirements_core.txt  requirements_dev.txt  requirements_module.txt
deploy/compose-files/: docker-compose.autostart.yml  docker-compose.autostop.yml  docker-compose.camera.yml  docker-compose.constant_publisher.yml  docker-compose.database.yml  docker-compose.database_sync.yml  docker-compose.filter.yml  docker-compose.gps_time_service.yml  docker-compose.math_processor.yml  docker-compose.modbus_tcp_forwarder.yml  docker-compose.nmea_gnss.yml  docker-compose.pid_controller.yml  docker-compose.ping.yml  docker-compose.plotter.yml  docker-compose.rest_api.yml  docker-compose.startstop_forwarder.yml  docker-compose.system_monitor.yml  docker-compose.tcp_sink.yml  docker-compose.udp_sink.yml
deploy/docker-base-images/: Dockerfile.build_cpp  Dockerfile.build_py  Dockerfile.run_cpp  Dockerfile.run_py
deploy/scripts/: build_cpp_module.sh  buildx.sh  change_usb_mem.sh  change_version.sh  developer_init.sh  helpers.sh  python3.12_install.sh  setup.sh  setup_remote.sh
doc/: DEPLOYMENT.md  DEVELOPMENT.md  QUICKSTART.md
extensions/io_modules/autostart/: Dockerfile  autostart.py  config.py  documentation.html
extensions/io_modules/camera/: Dockerfile  camera.py  config.py  documentation.html  requirements.txt
extensions/io_modules/constant_publisher/: Dockerfile  config.py  constant_publisher.py  documentation.html  requirements.txt
extensions/io_modules/filter/: .gitignore  CMakeLists.txt  Dockerfile  conanfile.txt  documentation.html  filter.code-workspace  main.cpp
extensions/io_modules/filter/header/: AverageFilter.hpp  DownsampleAverageFilter.hpp  ExponentialAverageFilter.hpp  FilterBase.hpp  MedianFilter.hpp  filter.h
extensions/io_modules/filter/source/: AverageFilter.cpp  DownsampleAverageFilter.cpp  ExponentialAverageFilter.cpp  FilterBase.cpp  MedianFilter.cpp  filter.cpp
extensions/io_modules/gpsd_client/: Dockerfile  config.py  documentation.html  gpsd_client.py  requirements.txt
extensions/io_modules/math_processor/: Dockerfile  config.py  documentation.html  math_processor.py
extensions/io_modules/modbus_tcp_forwarder/: Dockerfile  config.py  documentation.html  modbus_tcp_forwarder.py  requirements.txt
extensions/io_modules/nmea_gnss/: Dockerfile  config.py  documentation.html  nmea_gnss.py  ntrip_client.py  requirements.txt
extensions/io_modules/pid_controller/: Dockerfile  config.py  documentation.html  pid.py  pid_controller.py
extensions/io_modules/ping/: Dockerfile  config.py  documentation.html  entrypoint.sh  ping.py  requirements.txt
extensions/io_modules/plotter/: Dockerfile  config.py  documentation.html  install_dependencies.sh  install_js_libs.py  plotter.py  requirements.txt  server.py
extensions/io_modules/system_monitor/: Dockerfile  config.py  documentation.html  requirements.txt  system_monitor.py
extensions/io_modules/tcp_sink/: Dockerfile  TcpManager.py  config.py  documentation.html  tcp_sink.py
extensions/io_modules/udp_sink/: Dockerfile  UdpManager.py  config.py  documentation.html  udp_sink.py
extensions/system/autostart/: Dockerfile  autostart.py
extensions/system/autostop/: Dockerfile  autostop.py  config.py  documentation.html
extensions/system/database_sync/: Dockerfile  config.py  database_sync.py  documentation.html  requirements.txt
tools/: .gitignore  live_sniffer_zenoh.py  live_sniffer_zeromq.py  mcap_convert.py  mcap_reader.py
tools/databeam_mcap_reader/: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  build_wheels_manylinux.sh  build_wheels_windows.ps1  conanfile.txt  pyproject.toml  requirements.txt  test_wheel.py  test_wheel.sh
tools/databeam_mcap_reader/src/: download_mcap_cli.py  parse_mcap.cpp
tools/databeam_mcap_reader/src/databeam_mcap_reader/: __init__.py  __init__.pyi  collector.py  reader.py
(+130 files in other folders)
